--- a/src/component/portfolio/Portfolio.module.css
+++ b/src/component/portfolio/Portfolio.module.css
@@ -1,54 +1,58 @@
 .portfolio__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2.5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.5rem;
 }
 
 .portfolio__item {
-  background: var(--color-bg-variant);
-  padding: 1.3rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
-  transition: var(--transition);
+    background: var(--color-bg-variant);
+    padding: 1.3rem;
+    border-radius: 2rem;
+    border: 1px solid transparent;
+    transition: var(--transition);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .portfolio__item:hover {
-  border: var(--color-primary-variant);
-  background: transparent;
+    border: var(--color-primary-variant);
+    background: transparent;
 }
 
 .portfolio__item-image {
-  border-radius: 1.5rem;
-  overflow: hidden;
-  height: 60%;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    height: 60%;
 }
 .portfolio__item-image img {
-  border-radius: 1.5rem;
+    border-radius: 1.5rem;
 }
 
 .portfolio__item h3 {
-  margin: 1.2rem 0 2rem;
+    margin: 1.2rem 0 2rem;
 }
 .portfolio__item-cta {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 1;
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1;
 }
 
 /* ------------------미디어 쿼리 중간 크기------------------- */
 
 @media screen and (max-width: 1024px) {
-  .portfolio__container {
-    grid-template-columns: 1fr 1fr;
-    gap: 1.2rem;
-  }
+    .portfolio__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
+    }
 }
 
 /* ------------------미디어 쿼리 작은 크기------------------- */
 
 @media screen and (max-width: 600px) {
-  .portfolio__container {
-    grid-template-columns: 1fr;
-    gap: 1rem;
-  }
+    .portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
 }
