--- a/src/component/portfolio/Portfolio.module.css
+++ b/src/component/portfolio/Portfolio.module.css
@@ -26,7 +26,7 @@
 
 .portfolio__item-image {
     border-radius: 1.5rem;
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 60%;
 }
 .portfolio__item-image img {
